Java Backend: Recipes stage 3 implementation - java records